--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,74 @@ body, html {
     height: 100vh;
     width: 100%;
 }
+
+/*Configurações header*/
+header {
+    background-color: #7A8A97;
+    display: flex;
+    flex-flow: row nowrap;
+    padding: 1em;
+    justify-content: space-around;
+    
+}
+
+#tituloprincipal > a {
+    text-decoration: none;
+    color: black;
+}
+
+#navBar {
+    flex: 0.2 2 auto;
+}
+#navBar > ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    transform: translateY(5px);
+}
+
+.itensNavBar {
+    margin-left: 1em;
+}
+
+.itensNavBar > a {
+    text-decoration: none;
+    color: black;
+}
+
+.itensNavBar > a:hover {
+    text-decoration: underline;
+    color: white;
+}
+
+@media screen and (max-width: 600px) {
+    header {
+        flex-flow: column nowrap;
+        align-items: center;
+        padding: 1em 0em 0.2em 0em;
+    }
+    #navBar {
+        width: 100%;
+    }
+    #navBar > ul {
+        flex-flow: column nowrap;
+        transform: translateY(0);
+        padding-top: 1em;
+    }
+    .itensNavBar {
+        margin-left: 0em;
+        background-color: white;
+        border: 1px solid #7a8a97;
+        
+    }
+    .itensNavBar > a {
+        display: block;
+        padding: 0.6em;
+    }
+    .itensNavBar > a:hover {
+        text-decoration: none;
+        color: white;
+        background-color: black;
+    }
+}
