--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -92,12 +92,19 @@ body {
   width: 236px;
   font-size: 1rem;
   font-weight: 700;
+  align-items: center;
   text-decoration: none;
   background-color: #238d69;
-  color: #fff;
-  padding: 10px 20px;
+  color: #f7f7f7;
   border-radius: 4px;
   display: block;
+  padding: 10px 14px;
   margin: 20px auto;
   text-align: center;
+  cursor: pointer;
+  transition: 0.3s linear;
+}
+
+.button:hover {
+  opacity: 0.85;
 }
