problemas no header das paginas voluntarios e doações consertados

--- a/assets/css/voluntario.css
+++ b/assets/css/voluntario.css
@@ -10,7 +10,7 @@ main {
   padding: 30px 5px;
   max-width: 60vw;
 }
-section h2 {
+.form-voluntario h2 {
   padding: 15px 0;
   text-align: left;
   font-size: 30px;
