--- a/assets/css/doacao.css
+++ b/assets/css/doacao.css
@@ -5,12 +5,12 @@
   width: 100%;
   padding: 20px;
 }
-section h2 {
+.content h2 {
   margin-bottom: 20px;
   font-size: 32px;
   font-weight: 700;
 }
-section p {
+.content p {
   margin-bottom: 20px;
   font-size: 16px;
   font-weight: 400;
