--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -125,6 +125,7 @@ body {
     flex-direction: column;
     margin: 0 auto;
     text-align: center;
+    align-items: center;
   }
 
   .project picture{
