--- a/assets/css/doacao.css
+++ b/assets/css/doacao.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 .container {
   display: flex;
   flex-direction: column;
@@ -18,17 +20,21 @@
 }
 .content {
   margin-top: 30px;
-  margin-bottom: 30px;
-  width: 50vw;
-  height: 100px;
+  margin-bottom: 20px;
+  width: 52vw;
 }
 .map-Box {
   position: relative;
   width: 450px;
   height: 340px;
-  margin-top: 20px;
 }
 .map-Box iframe {
   width: 100%;
   height: 100%;
+}
+
+@media screen and (max-width: 600px) {
+  .map-Box {
+    width: 80vw;
+  }
 }
