--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,119 +1,113 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 /*Configurações gerais*/
 * {
-    padding: 0;
-    margin: 0;
-    font-family: "Roboto", Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
-
-
 
 /*Configurações header*/
-header{
-    background-color: #7A8A97;
+header {
+  background-color: #7a8a97;
 }
 .header-container {
-    max-width: 1200px;
-    display: flex;
-    flex-flow: row nowrap;
-    padding: 1em;
-    justify-content: space-around;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 1200px;
+  display: flex;
+  flex-flow: row nowrap;
+  padding: 1em;
+  justify-content: space-around;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #tituloprincipal > a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 #navBar {
-    flex: 0.2 2 auto;
+  flex: 0.2 2 auto;
 }
 #navBar > ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    transform: translateY(5px);
+  list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  transform: translateY(5px);
 }
 
 .itensNavBar {
-    margin-left: 1em;
+  margin-left: 1em;
 }
 
 .itensNavBar > a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .itensNavBar > a:hover {
-    text-decoration: underline;
-    color: white;
+  text-decoration: underline;
+  color: white;
 }
 
-footer{
-    background-color: #0B1E2D;
-    margin-top: 60px;
-  }
-  
-  .footer-container{
-    display: flex;
-    flex-direction: column;
-    padding: 20px 0;
-    max-width: 1000px;
-    gap: 16px;
-    margin: 0 auto;
-    align-items: start;
-    padding: 60px 0px;
-  }
-  
-  .footer-container p{
-    font-size: 1rem;
-    color:#f7f7f7;
-    max-width: 1200px;
-  }
-  
-  .footer-container a{
-    text-decoration: none;
-    color: #f7f7f7;
-    font-weight: 700;
-  }
+footer {
+  background-color: #0b1e2d;
+  margin-top: 60px;
+}
 
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 0;
+  max-width: 1000px;
+  gap: 16px;
+  margin: 0 auto;
+  align-items: start;
+  padding: 60px 0px;
+}
+.footer-container p {
+  font-size: 1rem;
+  color: #f7f7f7;
+  max-width: 1200px;
+}
+
+.footer-container a {
+  text-decoration: none;
+  color: #f7f7f7;
+  font-weight: 700;
+}
 
 @media screen and (max-width: 600px) {
-    header {
-        flex-flow: column nowrap;
-        align-items: center;
-        padding: 1em 0em 0.2em 0em;
-    }
-    #navBar {
-        width: 100%;
-    }
-    #navBar > ul {
-        flex-flow: column nowrap;
-        transform: translateY(0);
-        padding-top: 1em;
-    }
-    .itensNavBar {
-        margin-left: 0em;
-        background-color: white;
-        border: 1px solid #7a8a97;
-        
-    }
-    .itensNavBar > a {
-        display: block;
-        padding: 0.6em;
-    }
-    .itensNavBar > a:hover {
-        text-decoration: none;
-        color: white;
-        background-color: black;
-    }
+  header {
+    flex-flow: column nowrap;
+    align-items: center;
+    padding: 1em 0em 0.2em 0em;
+  }
+  #navBar {
+    width: 100%;
+  }
+  #navBar > ul {
+    flex-flow: column nowrap;
+    transform: translateY(0);
+    padding-top: 1em;
+  }
+  .itensNavBar {
+    margin-left: 0em;
+    background-color: white;
+    border: 1px solid #7a8a97;
+  }
+  .itensNavBar > a {
+    display: block;
+    padding: 0.6em;
+  }
+  .itensNavBar > a:hover {
+    text-decoration: none;
+    color: white;
+    background-color: black;
+  }
 }
-
 /*Configurações Footer*/
